FullQa New/src/FinancialForce Revenue Recognition Expansion for PSA/objects/ffrr__RevenueForecastTransactionLine__c.object
<CustomObject>
    <fields>
        <fullName>Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone</label>
        <referenceTo>pse__Milestone__c</referenceTo>
        <relationshipLabel>Revenue Forecast Transaction Lines</relationshipLabel>
        <relationshipName>RevenueForecastTransactionLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link field to project in psa.</description>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Revenue Forecast Transaction Lines</relationshipLabel>
        <relationshipName>RevenueForecastTransactionLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ValueCurrency__c</fullName>
        <formula>ffrr__Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value (Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>